# Tokenization-Hack

./: .eslintignore  .gitignore  .npmrc  .prettierignore  LICENSE  README.md  package-lock.json  package.json  project_structure.text  tsconfig.base.json  tsconfig.json  turbo.json
.turbo/cache/: 24d6d9e4d23c88e1-meta.json  24d6d9e4d23c88e1.tar.zst  37fb8f08bf56952b-meta.json  37fb8f08bf56952b.tar.zst  901cf68cc659d441-meta.json  901cf68cc659d441.tar.zst  c69dec2d5d896908-meta.json  c69dec2d5d896908.tar.zst  d6ac9c87dbc0f5c3-meta.json  d6ac9c87dbc0f5c3.tar.zst  e725e4e577cbff82-meta.json  e725e4e577cbff82.tar.zst  f93bd405607d159f-meta.json  f93bd405607d159f.tar.zst
.turbo/daemon/: c132fdc208dbf52f-turbo.log.2025-12-05
apps/backoffice-tokenization/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/evidence-service/: .gitignore  README.md  eslint.config.mjs  package.json
apps/evidence-service/src/: index.ts
apps/investor-tokenization/: README.md  next.config.ts  package.json  postcss.config.mjs  tsconfig.json  vercel.json
apps/investor-tokenization/src/: middleware.ts
apps/project-updates-tokenization/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/smart-contracts/: Cargo.toml
apps/smart-contracts/contracts/token-sale/: Cargo.toml
apps/smart-contracts/contracts/token-sale/src/: lib.rs  sale.rs  test.rs
apps/smart-contracts/contracts/token-sale/test_snapshots/test/: test_buy_transfers_usdc_and_mints_sale_token.1.json
scripts/: make-tw-block-wrappers.mjs
(+305 files in other folders)
