[package]
name = "token-sale"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
escrow = { path = "../escrow" }
soroban-token-contract = { path = "../token-factory" }

[lib]
crate-type = ["cdylib", "rlib"]
